# practise-rust-sql-actix

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/controllers/: product_controller.rs
