[package]
name = "mysql-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
chrono = "0.4"
#openssl = { version = "0.10", features = ["vendored"] }
actix-web = "3"
serde = "1"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"